# Particelle

./: CHANGELOG.md  Cargo.toml  README.md  ai2yaml  fix_clippy.patch  install.sh  my_first_patch.yaml  run_test.rs  update_tests.diff
.Jules/: palette.md
.github/workflows/: ci.yml  nightly.yml  release.yml
Formula/: particelle.rb
audio/: stretch_4x.yaml
curves/: jitter.json  linear_pos.json  stretch_pos.json  sweep_down.json  sweep_up.json  triangle.json
docs/: AI_PATCH_GENERATOR.md  ANNOUNCEMENT_FAQ.md  LISTENING_DEMOS.md  RELEASE_CHANNELS.md  SCHEMA_MIGRATIONS.md  generate_grain_hopping.py  generate_windows.py
examples/: ambient_swell.yaml  binaural_beats.yaml  brass_synthesis.yaml  chaos_scatter.yaml  choir_ensemble.yaml  drone_generator.yaml  flanger_effect.yaml  formant_preservation.yaml  glitch_stutter.yaml  golden_fingerprints.tsv  granular_chorus.yaml  granular_delay.yaml  harsh_noise_wall.yaml  listening_demos.tsv  metallic_resonance.yaml  mpe_test.yaml  pitch_quantization.yaml  pitch_shift_down.yaml  pitch_shift_up.yaml  pulsar_synthesis.yaml  reverse_playback.yaml  rhythmic_chopping.yaml  scratch_effect.yaml  shimmer_reverb.yaml  spectral_freezing.yaml  stochastic_melody.yaml  stretch_4x.yaml  tape_degradation.yaml  texture_cloud.yaml  time_stretch_extreme.yaml  tremolo_grains.yaml  vibrato_grains.yaml  water_drops.yaml  wind_noise.yaml
examples/ai2yaml/: 01_31edo_drone.yaml  02_pitch_follower.yaml  03_spectral_shimmer.yaml  04_percussive_freeze.yaml  05_atmos_rain.yaml  06_sidechain_gate.yaml  07_chaotic_lfo_swarm.yaml  08_chroma_driven_pan.yaml  09_mfcc_texture.yaml  10_polyrhythmic_bursts.yaml  11_arabic_microtonal.yaml  12_granular_reverb_tail.yaml  13_reverse_scrub.yaml  14_dual_source_layer.yaml  15_flux_phoneme_gate.yaml  16_inharmonicity_follower.yaml  17_mfcc_triple_cloud.yaml  18_zcr_wind_turbulence.yaml  19_attack_time_density.yaml  20_thunder_height_cloud.yaml  21_bohlen_pierce_pad.yaml  22_entropy_spatial_width.yaml  23_breathing_loop.yaml  24_micro_montage.yaml  25_granular_pitch_shift.yaml  26_loudness_scatter.yaml  27_tritone_chroma_position.yaml  28_three_tier_ambient.yaml  29_harmonic_ratio_density.yaml  30_cinematic_impact.yaml  README.md
examples/analysis/: cross_file_flatness_window.yaml  f0_hop_size.yaml
examples/complex/: README.md  chaos_lorenz.yaml  directional_shimmer.yaml  dxd_384khz_64ch.yaml  hyper_mod_matrix.yaml  max_density_swarm.yaml  multi_cloud_saturation.yaml  multi_extractor_orchestra.yaml  stochastic_brownian.yaml
examples/mono/: chaos_mono_04.yaml  chaos_mono_08.yaml  chaos_mono_13.yaml  chaos_mono_20.yaml  chaos_mono_29.yaml  chaos_mono_30.yaml  chaos_mono_35.yaml  chaos_mono_40.yaml  chaos_mono_50.yaml  drone_mono_16.yaml  glitch_mono_02.yaml  glitch_mono_26.yaml  glitch_mono_32.yaml  glitch_mono_38.yaml  glitch_mono_39.yaml  glitch_mono_42.yaml  mpe_mono_03.yaml  mpe_mono_09.yaml  mpe_mono_14.yaml  mpe_mono_27.yaml  mpe_mono_31.yaml  mpe_mono_33.yaml  mpe_mono_34.yaml  pitch_shift_mono_01.yaml  pitch_shift_mono_05.yaml  pitch_shift_mono_11.yaml  pitch_shift_mono_12.yaml  pitch_shift_mono_24.yaml  pitch_shift_mono_28.yaml  rhythm_mono_15.yaml  rhythm_mono_17.yaml  rhythm_mono_19.yaml  rhythm_mono_22.yaml  rhythm_mono_23.yaml  rhythm_mono_45.yaml  rhythm_mono_46.yaml  rhythm_mono_49.yaml  texture_mono_06.yaml  texture_mono_07.yaml  texture_mono_10.yaml  (+10 more)
examples/multichannel/: chaos_multichannel_02.yaml  chaos_multichannel_03.yaml  chaos_multichannel_04.yaml  chaos_multichannel_27.yaml  chaos_multichannel_29.yaml  chaos_multichannel_31.yaml  chaos_multichannel_34.yaml  chaos_multichannel_50.yaml  (+42 more)
particelle-analysis/: Cargo.toml
particelle-cli/: Cargo.toml
particelle-cli/benches/: copy_channels.rs
particelle-cli/src/: main.rs  main.rs.orig  osc_control.rs
particelle-cli/tests/: external_control_io.rs  render_output_format.rs
particelle-core/: Cargo.toml
particelle-curve/: Cargo.toml
particelle-dsp/: Cargo.toml
particelle-dsp/src/: interpolation.rs  lib.rs  resampling.rs  smoothing.rs
particelle-dsp/src/window/: cache.rs  generator.rs  mod.rs  normalization.rs  normalize.rs  schema.rs  spec.rs
particelle-io/: Cargo.toml
particelle-io/src/: file.rs  hardware.rs  lib.rs
particelle-midi/: Cargo.toml
particelle-midi/benches/: routing_bench.rs
particelle-midi/src/: events.rs  lib.rs  mpe.rs  offline.rs  realtime.rs  routing.rs
particelle-params/: Cargo.toml
particelle-schema/: Cargo.toml
particelle-schema/src/: compat.rs  config.rs  lib.rs  validation.rs
particelle-tuning/: Cargo.toml
samples/: README.md  manifest.sha256
scripts/: announcement_readiness.sh  check_examples.sh  check_performance.sh  generate_sample_pack.sh  package_release.sh  prepare_example_samples.sh  render_listening_demos.sh  update_golden_fingerprints.sh  update_homebrew_formula.sh  verify_sample_pack.sh
(+86 files in other folders)
