[package]
name    = "particelle-dsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
particelle-core.workspace = true
serde.workspace   = true
serde_json.workspace = true
thiserror.workspace = true
libm.workspace = true
rubato = "1.0.1"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"
