[package]
name    = "particelle-midi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default  = []
realtime = ["dep:midir", "dep:ringbuf"]

[dependencies]
particelle-params.workspace  = true
particelle-tuning.workspace  = true
midly.workspace     = true
serde.workspace     = true
thiserror.workspace = true
midir   = { version = "0.10", optional = true }
ringbuf = { version = "0.4",  optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "routing_bench"
harness = false
