[package]
name    = "particelle-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
particelle-core.workspace   = true
particelle-dsp.workspace    = true
particelle-curve.workspace  = true
particelle-params.workspace = true
particelle-tuning.workspace = true
serde.workspace      = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace  = true
